# YYC-Algorithm

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml  requirements-dev.txt
examples/: sample_matrix.txt
src/yyc/: __init__.py
src/yyc/benchmarks/: __init__.py  runner.py
src/yyc/cli/: __init__.py  interface.py
src/yyc/core/: __init__.py  algorithm.py
src/yyc/utils/: __init__.py  matrix.py
tests/: __init__.py  test_algorithm.py  test_error_handling.py  test_matrix.py
